tests/ui/higher-ranked/trait-bounds/issue-95230.stderr
error[E0275]: overflow evaluating the requirement `for<'a> &'a mut Bar well-formed`
  --> $DIR/issue-95230.rs:7:13
   |
LL |     for<'a> &'a mut Self:;
   |             ^^^^^^^^^^^^
   |
note: required by a bound in `Bar`
  --> $DIR/issue-95230.rs:7:13
   |
LL | pub struct Bar
   |            --- required by a bound in this struct
LL | where
LL |     for<'a> &'a mut Self:;
   |             ^^^^^^^^^^^^ required by this bound in `Bar`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0275`.
